# xpcs-toolkit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_REFERENCE.md  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  DEPENDENCIES_GUIDE.md  DEVELOPER_GUIDE.md  FILE_FORMAT_GUIDE.md  LICENSE  MAKEFILE_GUIDE.md  MANIFEST.in  Makefile  NAMING_CONVENTIONS.md  PERFORMANCE_OPTIMIZATIONS.md  QUALITY_GATES.md  QUALITY_REPORT.md  README.md  REFACTORING_PROGRESS.md  SCIENTIFIC_BACKGROUND.md  USER_GUIDE.md  bandit-report.json  plan.txt  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-full.txt  requirements-minimal.txt  requirements.txt  run_optimized_tests.py  security_scan.json  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: comprehensive-testing.yml  docs.yml  quality-checks.yml  quality-gates.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  logging.md  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/archive/: MIGRATION_GUIDE.md  PHASE_4_5_IMPLEMENTATION_SUMMARY.md  REORGANIZATION_SUMMARY.md
docs/guides/: index.rst  saxs_analysis.rst
scripts/: test_monitor.py
test_reports/: test_results_quick_20250902_130836.json
tutorials/: 01_getting_started.ipynb  02_correlation_analysis.ipynb  03_saxs_analysis.ipynb  README.md
xpcs_toolkit/: __init__.py  _lazy_imports.py  _version.py  analysis_kernel.py  cli_headless.py  compat.py  config.py  data_file_locator.py  file_locator.py  mpl_compat.py  py.typed  run_tests.py  viewer_kernel.py  xpcs_file.py
xpcs_toolkit/cli/: headless.py
xpcs_toolkit/core/: __init__.py
xpcs_toolkit/core/analysis/: __init__.py  kernel.py
xpcs_toolkit/core/models/: __init__.py
xpcs_toolkit/fileIO/: __init__.py  aps_8idi.py  ftype_utils.py  hdf_reader.py  lazy_hdf_reader.py  qmap_utils.py
xpcs_toolkit/helper/: __init__.py  fitting.py  listmodel.py  logging_config.py  logging_utils.py  logwriter.py  utils.py
xpcs_toolkit/io/export/: __init__.py
xpcs_toolkit/io/formats/: __init__.py  detection.py
xpcs_toolkit/io/formats/hdf5/: __init__.py  lazy_reader.py  reader.py
xpcs_toolkit/module/: __init__.py  average_toolbox.py  g2mod.py  intt.py  saxs1d.py  saxs2d.py  stability.py  tauq.py  twotime.py  twotime_utils.py
xpcs_toolkit/plugins/: __init__.py
xpcs_toolkit/scientific/: __init__.py
xpcs_toolkit/scientific/correlation/: __init__.py  g2.py  twotime.py
xpcs_toolkit/scientific/dynamics/: __init__.py  intensity.py  stability.py  tauq.py
xpcs_toolkit/scientific/processing/: __init__.py  averaging.py
xpcs_toolkit/scientific/scattering/: __init__.py  saxs_1d.py  saxs_2d.py
xpcs_toolkit/tests/: __init__.py  conftest.py  run_tests.py  test_analysis_kernel.py  test_data_file_locator.py  test_fileio.py  test_logging.py  test_modules.py  test_xpcs_file.py  test_xpcs_toolkit.py
xpcs_toolkit/tests/fileio/: __init__.py  test_basic.py  test_comprehensive.py
xpcs_toolkit/tests/fixtures/: synthetic_data.py
xpcs_toolkit/tests/integration/: __init__.py  test_documentation.py  test_integration.py  test_reorganization_integration.py  test_robustness.py  test_scientific_workflows.py
xpcs_toolkit/tests/io/: __init__.py
xpcs_toolkit/tests/io/formats/: __init__.py
xpcs_toolkit/tests/io/formats/hdf5/: __init__.py  test_reader.py
xpcs_toolkit/tests/performance/: __init__.py  test_performance.py
xpcs_toolkit/tests/performance/benchmarks/: test_performance.py
xpcs_toolkit/tests/performance/numerical/: test_accuracy.py
xpcs_toolkit/tests/scientific/: __init__.py
xpcs_toolkit/tests/scientific/correlation/: test_g2.py
xpcs_toolkit/tests/scientific/processing/: __init__.py  test_averaging.py
xpcs_toolkit/tests/unit/: __init__.py  test_analysis_kernel.py  test_cli_headless.py  test_compatibility.py  test_config.py  test_data_file_locator.py  test_logging.py  test_logwriter_simple.py  test_modular_structure.py  test_modules.py  test_scientific_modules.py  test_utils.py  test_xpcs_file.py  test_xpcs_file_comprehensive.py  test_xpcs_file_extended.py  test_xpcs_toolkit.py
xpcs_toolkit/utils/common/: helpers.py  lazy_imports.py
xpcs_toolkit/utils/compatibility/: __init__.py  matplotlib.py
xpcs_toolkit/utils/concurrency/: __init__.py
xpcs_toolkit/utils/logging/: config.py  writer.py
xpcs_toolkit/utils/math/: __init__.py  fitting.py
xpcs_toolkit/utils/validation/: __init__.py
